--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -104,9 +104,6 @@ set a directory to output the index.
 \fB\-T\fR, \fB\-\-template\-dir\fR=\fIdir\fR
 set a directory having NMZ.{head,foot,body}.*.
 .TP
-\fB\-L\fR, \fB\-\-lang\fR=\fIlang\fR
-set language (ja or en)
-.TP
 \fB\-q\fR, \fB\-\-quiet\fR
 suppress status messages during execution.
 .TP
@@ -124,6 +121,8 @@ show this help and exit.
 .SH "REPORTING BUGS"
 Report bugs to <bug-namazu@namazu.org>.
 .SH COPYRIGHT
+Copyright \(co 1997-1999 Satoru Takabayashi All rights reserved.
+.br
 Copyright \(co 2000 Namazu Project All rights reserved.
 .PP
 This is free software; you can redistribute it and/or modify
