--- a/man/namazu.1
+++ b/man/namazu.1
@@ -71,9 +71,6 @@ print current configuration.
 \fB\-q\fR, \fB\-\-quiet\fR
 do not display extra messages except search results.
 .TP
-\fB\-L\fR, \fB\-\-lang\fR=\fIlang\fR
-set language (ja or en)
-.TP
 \fB\-v\fR, \fB\-\-version\fR
 show the version of namazu and exit.
 .TP
@@ -82,6 +79,8 @@ show this help and exit
 .SH "REPORTING BUGS"
 Report bugs to <bug-namazu@namazu.org>.
 .SH COPYRIGHT
+Copyright \(co 1997-1999 Satoru Takabayashi All rights reserved.
+.br
 Copyright \(co 2000 Namazu Project All rights reserved.
 .br
 This is free software; you can redistribute it and/or modify
