--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-31  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* POTFILES.in: scripts/mknmz.pl.in -> scripts/mknmz.in.
+
 2000-01-29  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* POTFILES.in: Add pl/usage.pl
