--- a/po/ja.po
+++ b/po/ja.po
@@ -235,7 +235,7 @@ msgstr ""
 "    -R, --no-replace        URI の置き換えを行わない\n"
 "    -U, --no-decode-uri     URI encode の復元を行わない\n"
 "    -o, --output=file       指定したファイルに検索結果を出力する\n"
-"    -f, --config=file       namazu.conf を指定する\n"
+"    -f, --config=file       設定ファイルを指定する\n"
 "    -C, --show-config       設定を表示する\n"
 "    -q, --quiet             検索結果以外のメッセージを表示しない\n"
 "    -v, --version           ヴァージョンを表示する\n"
@@ -648,7 +648,7 @@ msgstr ""
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
 "  -r, --replace=code       URIを置換するためのコードを指定する\n"
 "      --mtime=int          変更日制限 (int が 負で最近、正で古いものだけ、\n"
-"                           例。-50 で 50 日以内、50 で 50 日より古いものだけ)\n"
+"                           例: -50 で 50 日以内、50 で 50 日より古いものだけ)\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
