--- a/po/ja.po
+++ b/po/ja.po
@@ -240,7 +240,7 @@ msgstr ""
 "    -C, --show-config       設定を表示する\n"
 "    -q, --quiet             検索結果以外のメッセージを表示しない\n"
 "    -v, --version           ヴァージョンを表示する\n"
-"        --help              このヘルプをを表示する\n"
+"        --help              このヘルプを表示する\n"
 "\n"
 "バグ報告は <%s> へどうぞ\n"
 
