--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-02-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* configure.in: Applied Motoyuki Kasahara's patch. [namazu-dev
+	1418]
+
+	* acconfig.h: Removed.
+
 2000-01-31  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* scripts/gcnmz.in: Show usage if no arguments are specified.
