--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-02-01  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* nmz/libnamazu.[ch] (nmz_codeconv_query): Moved to nmz/codeconv.[ch].
+
+	* nmz/query.c: Includes nmz/codeconv.h.
+
 2000-02-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in: Applied Motoyuki Kasahara's patch. [namazu-dev
