--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-02  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* nmz/util.c (nmz_is_file_exists): Use stat instead of fopen.
+
 2000-02-01  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* nmz/libnamazu.[ch] (nmz_codeconv_query): Moved to nmz/codeconv.[ch].
