--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-02-02  Ryuji Abe  <raeva@t3.rim.or.jp>
 
+	* configure.in: Applied Motoyuki Kasahara's patch. [namazu-dev
+	1434]
+
 	* nmz/util.c (nmz_is_file_exists): Use stat instead of fopen.
 
 	* Makefile.am: Abolished File-MMagic automatic installation.
