--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-02  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* configure.in: Add friendly messages to File-MMagic handling.
+
 2000-02-02  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* configure.in: Applied Motoyuki Kasahara's patch. [namazu-dev
@@ -30,6 +34,8 @@
 
 
 2000-02-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* pl/conf.pl.in: Add *\.png to $DENY_REGEX.
 
 	* configure.in: Apply Imperfect fix to File-MMagic $srcdir problem
 	[namazu-dev 1424].
