--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-04  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* scripts/Makefile.am: Remove #######+ bar.
+
 2000-02-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* src/output.c (fputs_without_html_tag): Add &quot; handling.
