--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-06  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* filter/pdf.pl (codeconv): Fix a bug: Require code
+	conversion. [namazu 1371].
+
 2000-02-05  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* nmz/replace.c (nmz_add_replace): Change behavior: Add new
