--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-06  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* pl/usage.pl: Add a description for --ole option.
+
 	* scripts/mknmz.in (load_document): Handle pre and post code
 	conversion. [namazu-dev 1469]
 
