--- a/po/ja.po
+++ b/po/ja.po
@@ -220,9 +220,9 @@ msgstr ""
 "使い方: namazu [options] <query> [index]...\n"
 "    -n, --max=num           一度に表示する件数\n"
 "    -w, --whence=num        表示する検索結果の先頭番号\n"
-"    -l, --list              検索結果を URI・パス名をリストで出力\n"
-"    -s, --short             短いフォーマットで出力\n"
-"        --result=ext        結果表示に用いる NMZ.result.ext を指定\n"
+"    -l, --list              検索結果を URI・パス名をリストで出力する\n"
+"    -s, --short             短い書式で出力する\n"
+"        --result=ext        結果表示に用いる NMZ.result.ext を指定する\n"
 "        --late              検索結果を新しい順にソートする\n"
 "        --early             検索結果を古い順にソートする\n"
 "        --sort=method       ソート方法を指定する (score, date, field:name)\n"
@@ -657,10 +657,9 @@ msgstr ""
 "      --exclude=regex      除外するパス名の正規表現を指定する\n"
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
 "  -r, --replace=code       URIを置換するためのコードを指定する\n"
-"  -o, --ole                OLE用の文書フィルタを使う. (Windows環境のみ)\n"
+"  -o, --ole                OLEの文書フィルタを用いる (Windows環境のみ)\n"
 "      --mtime=int          変更日制限 (int が 負で最近、正で古いものだけ、\n"
-"                           例: -50 で 50 日以内、50 で 50 "
-"日より古いものだけ)\n"
+"                           例: -50 で 50 日以内、50 で 50 日より古いものだけ)\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
