--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2000-02-10  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-	* scripts/mknmz.in (load_target_list): Fix the map
+	* scripts/mknmz.in (load_target_list): Add Win32 pathname handling.
+	(load_target_list): Fix the map
 	bug. [namazu-dev 1533]. 
+	(parse_options): Add checking for --update option.
 
 2000-02-07  Ryuji Abe  <raeva@t3.rim.or.jp>
 
