--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2000-02-12  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* lib/setenv.c: New file that stolen from glibc-2.1.2.
+
+	* lib/Makefile.am (EXTRA_DIST): Added setenv.c.
+
+	* configure.in (AC_CHECK_HEADERS): Added stdlib.h.
+	(AC_CHECK_FUNCS): Added tsearch and removed setenv.
+	(AC_REPLACE_FUNCS): Added setenv.
+
+	* nmz/i18n.c [HAVE_SETENV]: Removed.
+	[HAVE_PUTENV]: Likewise.
+
 2000-02-12  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* filter/mhonarc.pl (lftospace): New function.
