--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-13  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* doc/ja/tips.html: New file.
+
 	* filter/tex.pl (add_magic): Fix regex.
 
 2000-02-13  Ryuji Abe <raeva@t3.rim.or.jp>
