--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2000-02-13  Makoto Fujiwara <makoto@ki.nu>
+	* doc/ja/tutorial.html: New file.
+	
 2000-02-13  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* doc/ja/tips.html: New file.
