* test/d20000220.hnf: New file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-13  Kenji Suzuki  <kenji@po.ganseki.ne.jp>
+
+        * test/d20000220.hnf: New file.
+
 2000-02-13  Makoto Fujiwara <makoto@ki.nu>
 	* doc/ja/tutorial.html: New file.
 	* doc/ja/tutorial.html: ahref adjustment.
