update po files.

--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-12 01:42+0900\n"
+"POT-Creation-Date: 2000-02-14 05:46+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -212,8 +212,7 @@ msgid ""
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
-"    -q, --quiet          do not display extra messages except search "
-"results.\n"
+"    -q, --quiet          do not display extra messages except search results.\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
 "\n"
@@ -324,9 +323,7 @@ msgstr ""
 
 #: scripts/mknmz.in:769
 msgid "Present index is old type. it's unsupported.\n"
-msgstr ""
-"すでに存在するインデックスは古い形式のものです。今はサポートされていません。"
-"\n"
+msgstr "すでに存在するインデックスは古い形式のものです。今はサポートされていません。\n"
 
 #: scripts/mknmz.in:914
 msgid "No such index: "
@@ -372,11 +369,8 @@ msgstr " findfiles 終了: "
 
 #: scripts/mknmz.in:1147
 #, fuzzy, c-format
-msgid ""
-"Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
-msgstr ""
-" find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: "
-"(%.1f).\n"
+msgid "Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
+msgstr " find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: (%.1f).\n"
 
 #: scripts/mknmz.in:1164
 msgid "lang: "
@@ -623,22 +617,17 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=mtype   set a media type for all target files "
-"explicitly.\n"
+"  -t, --media-type=mtype   set a media type for all target files explicitly.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=file   load a file which contains list of target files.\n"
-"      --allow=regex        set a regex for file names which will be "
-"allowed.\n"
+"      --allow=regex        set a regex for file names which will be allowed.\n"
 "      --deny=regex         set a regex for file names which will be denied.\n"
-"      --exclude=regex      set a regex for pathnames which will be "
-"excluded.\n"
-"  -M, --meta               handle HTML meta tags for field-specified "
-"search.\n"
+"      --exclude=regex      set a regex for pathnames which will be excluded.\n"
+"  -M, --meta               handle HTML meta tags for field-specified search.\n"
 "  -r, --replace=code       set a code for replacing URI.\n"
-"  -o, --ole                use OLE document filters. (works on Windows "
-"only)\n"
+"  -o, --ole                use OLE document filters. (works on Windows only)\n"
 "      --mtime=int          limit by date, ( minus number for recent, i.e.,\n"
 "                           -50 for recent 50 days, 50 for older than 50.)\n"
 "\n"
