--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-02-12 20:59+0900\n"
+"POT-Creation-Date: 2000-02-14 05:46+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,8 +199,7 @@ msgid ""
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
-"    -q, --quiet          do not display extra messages except search "
-"results.\n"
+"    -q, --quiet          do not display extra messages except search results.\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
 "\n"
@@ -323,8 +322,7 @@ msgstr ""
 
 #: scripts/mknmz.in:1147
 #, c-format
-msgid ""
-"Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
+msgid "Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
 msgstr ""
 
 #: scripts/mknmz.in:1164
@@ -543,22 +541,17 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=mtype   set a media type for all target files "
-"explicitly.\n"
+"  -t, --media-type=mtype   set a media type for all target files explicitly.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=file   load a file which contains list of target files.\n"
-"      --allow=regex        set a regex for file names which will be "
-"allowed.\n"
+"      --allow=regex        set a regex for file names which will be allowed.\n"
 "      --deny=regex         set a regex for file names which will be denied.\n"
-"      --exclude=regex      set a regex for pathnames which will be "
-"excluded.\n"
-"  -M, --meta               handle HTML meta tags for field-specified "
-"search.\n"
+"      --exclude=regex      set a regex for pathnames which will be excluded.\n"
+"  -M, --meta               handle HTML meta tags for field-specified search.\n"
 "  -r, --replace=code       set a code for replacing URI.\n"
-"  -o, --ole                use OLE document filters. (works on Windows "
-"only)\n"
+"  -o, --ole                use OLE document filters. (works on Windows only)\n"
 "      --mtime=int          limit by date, ( minus number for recent, i.e.,\n"
 "                           -50 for recent 50 days, 50 for older than 50.)\n"
 "\n"
