--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-12 01:42+0900\n"
+"POT-Creation-Date: 2000-02-14 05:46+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -208,8 +208,7 @@ msgid ""
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
-"    -q, --quiet          do not display extra messages except search "
-"results.\n"
+"    -q, --quiet          do not display extra messages except search results.\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
 "\n"
@@ -363,8 +362,7 @@ msgstr " findfiles 終了: "
 
 #: scripts/mknmz.in:1147
 #, c-format
-msgid ""
-"Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
+msgid "Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"
 msgstr "対象ファイル数: %d (走査性能: 経過秒: %d, ファイル/秒: %.1f)\n"
 
 #: scripts/mknmz.in:1164
@@ -601,22 +599,17 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=mtype   set a media type for all target files "
-"explicitly.\n"
+"  -t, --media-type=mtype   set a media type for all target files explicitly.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=file   load a file which contains list of target files.\n"
-"      --allow=regex        set a regex for file names which will be "
-"allowed.\n"
+"      --allow=regex        set a regex for file names which will be allowed.\n"
 "      --deny=regex         set a regex for file names which will be denied.\n"
-"      --exclude=regex      set a regex for pathnames which will be "
-"excluded.\n"
-"  -M, --meta               handle HTML meta tags for field-specified "
-"search.\n"
+"      --exclude=regex      set a regex for pathnames which will be excluded.\n"
+"  -M, --meta               handle HTML meta tags for field-specified search.\n"
 "  -r, --replace=code       set a code for replacing URI.\n"
-"  -o, --ole                use OLE document filters. (works on Windows "
-"only)\n"
+"  -o, --ole                use OLE document filters. (works on Windows only)\n"
 "      --mtime=int          limit by date, ( minus number for recent, i.e.,\n"
 "                           -50 for recent 50 days, 50 for older than 50.)\n"
 "\n"
@@ -673,8 +666,7 @@ msgstr ""
 "  -r, --replace=code       URIを置換するためのコードを指定する\n"
 "  -o, --ole                OLEの文書フィルタを用いる (Windows環境のみ)\n"
 "      --mtime=int          変更日制限 (int が 負で最近、正で古いものだけ、\n"
-"                           例: -50 で 50 日以内、50 で 50 "
-"日より古いものだけ)\n"
+"                           例: -50 で 50 日以内、50 で 50 日より古いものだけ)\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
