--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2000-02-14  Ryuji Abe  <raeva@t3.rim.or.jp>
 
+	* nmz/i18n.c [HAVE_SETENV}: Revert to use.
+	[HAVE_PUTENV]: Likewise.
+
+	* configure.in (AC_CHECK_HEADERS): Removed search.h.
+	(AC_CHECK_FUNCS): Removed tsearch and Added setenv.
+	(AC_REPLACE_FUNCS): Removed setenv.
+
+	* lib/setenv.c: Removed.
+
+	* lib/Makefile.am (EXTRA_DIST): Removed setenv.c.
+
+2000-02-14  Ryuji Abe  <raeva@t3.rim.or.jp>
+
 	* configure.in: Fixed for help message.
 
 	* nmz/i18n.c (nmz_is_lang_ja): Moved to l10n-ja.c.
